--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -462,7 +462,7 @@
     <string name="biometric_settings_category_ways_to_use" msgid="2730401752914580200">"Выкарыстоўваць распазнаванне твару і адбітка, каб"</string>
     <string name="biometric_settings_use_biometric_unlock_phone" msgid="2002278066540969480">"Разблакіроўка"</string>
     <string name="biometric_settings_use_biometric_for_apps" msgid="5251210618011579314">"Аўтэнтыфікацыя ў праграмах"</string>
-    <string name="biometric_settings_hand_back_to_guardian" msgid="3747619291972376153">"Дайце тэлефон аднаму з бацькоў"</string>
+    <string name="biometric_settings_hand_back_to_guardian" msgid="3747619291972376153">"Дай тэлефон аднаму з бацькоў"</string>
     <string name="biometric_settings_hand_back_to_guardian_ok" msgid="1763788801883247426">"ОК"</string>
     <string name="lock_screen_intro_skip_title" msgid="342553937472568925">"Прапусціць наладжванне блакіроўкі экрана?"</string>
     <string name="lock_screen_intro_skip_dialog_text_frp" product="tablet" msgid="1570832293693405757">"Функцыі абароны прылады не будуць уключаны. Вы не зможаце забараніць іншым карыстацца гэтым планшэтам у выпадку згубы, крадзяжу ці скіду налад."</string>
@@ -4710,7 +4710,7 @@
     <string name="disabled_by_policy_title_suspend_packages" msgid="4223983156635729793">"Не ўдалося адкрыць праграму"</string>
     <string name="disabled_by_policy_title_financed_device" msgid="2328740314082888228">"Заблакіравана крэдыторам"</string>
     <string name="disabled_by_policy_title_biometric_parental_consent" msgid="2463673997797134678">"Патрабуецца дапамога бацькоў"</string>
-    <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Каб наладзіць гэту функцыю, перадайце тэлефон аднаму з бацькоў"</string>
+    <string name="disabled_by_policy_content_biometric_parental_consent" msgid="7124116806784305206">"Каб наладзіць гэту функцыю, перадай тэлефон аднаму з бацькоў"</string>
     <string name="default_admin_support_msg" msgid="8338570262037182531">"Калі ў вас ёсць пытанні, звярніцеся да IT-адміністратара"</string>
     <string name="admin_support_more_info" msgid="8407433155725898290">"Дадатковая інфармацыя"</string>
     <string name="admin_profile_owner_message" msgid="8860709969532649195">"У вашага адміністратара ёсць магчымасць маніторынгу і адміністравання праграм і даных, звязаных з вашым працоўным профілем, у тым ліку налад, дазволаў, карпаратыўнага доступу, сеткавай актыўнасці і геаданых."</string>
